# typnuket

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 001_base_line_Nikolay.ipynb  eda.ipynb  eda_features.ipynb  for_home_work.ipynb  test.ipynb
notebooks/homework2023/: Без названия.ipynb
src/data/: data_transform.py
src/features/: build_features.py
